--- a/head.html
+++ b/head.html
@@ -1,4 +1,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<script src="/scripts/aem.js" type="module"></script>
+<script src="/scripts/jquery-3.7.0.min.js" type="module"></script>
+<script src="/scripts/slick.min.js" type="module"></script>
+<script src="/scripts/lib-franklin.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
+<link rel="stylesheet" href="/styles/slick-theme.css">
+<link rel="stylesheet" href="/styles/slick.css">
 <link rel="stylesheet" href="/styles/styles.css"/>
